# ClairoLegal

./: README.md  main.py  pyproject.toml
advanced-agent/: .env  README.md  contract_analysis_BasicNDA.json  debug_pdf.py  main.py  pyproject.toml  sample_contract.txt  test_basic.py
advanced-agent/src/: clause_splitter.py  firecrawl.py  models.py  pdf_loader.py  prompts.py  workflow.py
